src/plugins/kibana_react/public/code_editor/editor.scss
.react-monaco-editor-container .monaco-editor .inputarea:focus {
  animation: none !important; // Removes textarea EUI blue underline animation from EUI
}

